--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#111111">
   <title>Volunteer</title>
-  <link rel="preload" href="fonts/MullerRegular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
-  <!-- <script defer src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-  <script defer src="js/main.js"></script> -->
+  <script defer src="js/main.js"></script>
 </head>
 
   <style>
@@ -27,13 +26,13 @@
       <main class="main">
         <ul>
           <li>
+            <a href="enter.html">Создание пользователя</a>
+          </li>
+          <li>
             <a href="questionnaire.html">Анкета</a>
           </li>
         </ul>
       </main>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
-    <script src="js/main.js"></script>
   </body>
 </html>
