--- a/index.html
+++ b/index.html
@@ -22,17 +22,24 @@
   </style>
 
   <body class="page__body">
-    <div class="site-container">
-      <main class="main">
-        <ul>
-          <li>
-            <a href="enter.html">Создание пользователя</a>
-          </li>
-          <li>
-            <a href="questionnaire.html">Анкета</a>
-          </li>
-        </ul>
-      </main>
-    </div>
+    <main class="main">
+      <ul>
+        <li>
+          <a href="enter.html">Создание пользователя</a>
+        </li>
+        <li>
+          <a href="questionnaire.html">Анкета</a>
+        </li>
+        <li>
+          <a href="profile-1.html">ЛК после анкеты</a>
+        </li>
+        <li>
+          <a href="profile-2.html">ЛК после подтверждения анкеты</a>
+        </li>
+        <li>
+          <a href="profile-3.html">ЛК после прохождения теста</a>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
