--- a/enter.html
+++ b/enter.html
@@ -1,116 +1,3 @@
-<!DOCTYPE html>
-<html lang="ru" class="page">
-  <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="theme-color" content="#111111">
-  <title>Volunteer</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/vendor.css">
-  <link rel="stylesheet" href="css/main.css">
-  <script defer src="js/main.js"></script>
-</head>
-
-  <body class="page__body">
-    <div class="site-container">
-      <main class="main">
-
-        <section class="page-header">
-  <div class="container">
-    <div
-      class="section__inner general-section general-section_showcase general-section_showcase-sh"
-    >
-      <div class="grid__content">
-        <div
-          class="general-section__item general-section__item_color-dark"
-        >
-          <div class="general-section__item_title">
-            <h1>Анкета Волонтёра</h1>
-          </div>
-          <div class="general-section__item_text">
-            <p class="large">
-              Чтобы отправить заявку на участие в программе <span>«Волонтёры
-                800»</span>, заполните все поля анкеты.<br /><br />
-              Становиться кандидатами в Волонтёры 800 могут граждане в
-              возрасте от 16 лет.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-        <div class="container step__container">
-          <div class="step">
-            Шаг 1 / <span>2</span>
-          </div>
-        </div>
-        <section>
-          <div class="container container_whiteback enter__container">
-            <div class="enter">
-              <!-- <h1 class="enter__title">
+<!DOCTYPE html><html lang="ru" class="page"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><meta name="theme-color" content="#111111"><title>Volunteer</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" href="css/vendor.css"><link rel="stylesheet" href="css/main.css"><script defer="defer" src="js/main.js"></script></head><body class="page__body"><div class="site-container"><main class="main"><section class="page-header"><div class="container"><div class="section__inner general-section general-section_showcase general-section_showcase-sh"><div class="grid__content"><div class="general-section__item general-section__item_color-dark"><div class="general-section__item_title"><h1>Анкета Волонтёра</h1></div><div class="general-section__item_text"><p class="large">Чтобы отправить заявку на участие в программе <span>«Волонтёры 800»</span>, заполните все поля анкеты.<br><br>Становиться кандидатами в Волонтёры 800 могут граждане в возрасте от 16 лет.</p></div></div></div></div></div></section><div class="container step__container"><div class="step">Шаг 1 / <span>2</span></div></div><section><div class="container container_whiteback enter__container"><div class="enter"><!-- <h1 class="enter__title">
                 Создание аккаунта <span>волонтёра</span>
-              </h1> -->
-              <form action="" id="enter-form">
-                <div class="info__item">
-                  <div class="info__item__input input_box">
-                    <input
-                      type="email"
-                      name="enter_email"
-                      placeholder="Введите ваш email"
-                      value=""
-                    />
-                  </div>
-                </div>
-                <div class="info__item">
-                  <div class="info__item__input input_box">
-                    <input
-                      type="text"
-                      name="enter_fullname"
-                      placeholder="ФИО"
-                      value=""
-                    />
-                  </div>
-                </div>
-                <div class="pp__check">
-                  <div class="pp-check pp-check_c">
-                    <div class="pp-check__checkbox">
-                      <div class="check">
-                        <input
-                          class="styled-checkbox"
-                          id="agree1"
-                          value=""
-                          name="enter_checkbox"
-                          type="checkbox"
-                        />
-                        <label for="agree1"></label>
-                      </div>
-                    </div>
-                    <div class="pp-check__text">
-                      <span>
-                        <label for="agree1">
-                          Нажимая кнопку далее, я подтверждаю, что ознакомился и
-                          принимаю
-                          <a href="#"
-                            >политику обработки персональных данных</a
-                          ></label
-                        >
-                      </span>
-                    </div>
-                  </div>
-                </div>
-                <div class="content-block__more">
-                  <button type="submit" class="content-block-more">
-                    <span>Далее</span>
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </section>
-      </main>
-    </div>
-  </body>
-</html>
+              </h1> --><form action="" id="enter-form"><div class="info__item"><div class="info__item__input input_box"><input type="email" name="enter_email" placeholder="Введите ваш email" value=""></div></div><div class="info__item"><div class="info__item__input input_box"><input type="text" name="enter_fullname" placeholder="ФИО" value=""></div></div><div class="pp__check"><div class="pp-check pp-check_c"><div class="pp-check__checkbox"><div class="check"><input class="styled-checkbox" id="agree1" value="" name="enter_checkbox" type="checkbox"> <label for="agree1"></label></div></div><div class="pp-check__text"><span><label for="agree1">Нажимая кнопку далее, я подтверждаю, что ознакомился и принимаю <a href="#">политику обработки персональных данных</a></label></span></div></div></div><div class="content-block__more"><button type="submit" class="content-block-more"><span>Далее</span></button></div></form></div></div></section></main></div></body></html>
