--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
     }
     ul li:hover {
       color: darkcyan;
-    }</style><body class="page__body"><main class="main"><ul><li><a href="enter.html">Создание пользователя</a></li><li><a href="questionnaire.html">Анкета</a></li><li><a href="profile-1.html">ЛК после анкеты</a></li><li><a href="profile-2.html">ЛК после подтверждения анкеты</a></li><li><a href="profile-3.html">ЛК после прохождения теста</a></li><li><a href="test.html">Тест</a></li></ul></main></body></html>
+    }</style><body class="page__body"><main class="main"><ul><li><a href="enter.html">Создание пользователя</a></li><li><a href="questionnaire.html">Анкета</a></li><li><a href="profile-1.html">ЛК после анкеты</a></li><li><a href="profile-2.html">ЛК после подтверждения анкеты</a></li><li><a href="profile-3.html">ЛК после прохождения теста</a></li><li><a href="test.html">Тест</a></li><li><a href="admin.html">Админка</a></li><li><a href="control.html">Админка анкета</a></li></ul></main></body></html>
