--- a/index.html
+++ b/index.html
@@ -1,6 +1,54 @@
-<!DOCTYPE html><html lang="ru" class="page"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><meta name="theme-color" content="#111111"><title>Volunteer</title><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" href="css/vendor.css"><link rel="stylesheet" href="css/main.css"><script defer="defer" src="js/main.js"></script></head><style>ul li {
+<!DOCTYPE html>
+<html lang="ru" class="page">
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#111111">
+  <title>Volunteer</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/vendor.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script defer src="js/main.js"></script>
+</head>
+
+  <style>
+    ul li {
       list-style: none;
     }
     ul li:hover {
       color: darkcyan;
-    }</style><body class="page__body"><main class="main"><ul><li><a href="enter.html">Создание пользователя</a></li><li><a href="questionnaire.html">Анкета</a></li><li><a href="profile-1.html">ЛК после анкеты</a></li><li><a href="profile-2.html">ЛК после подтверждения анкеты</a></li><li><a href="profile-3.html">ЛК после прохождения теста</a></li><li><a href="test.html">Тест</a></li><li><a href="admin.html">Админка</a></li><li><a href="control.html">Админка анкета</a></li></ul></main></body></html>
+    }
+  </style>
+
+  <body class="page__body">
+    <main class="main">
+      <ul>
+        <li>
+          <a href="enter.html">Создание пользователя</a>
+        </li>
+        <li>
+          <a href="questionnaire.html">Анкета</a>
+        </li>
+        <li>
+          <a href="profile-1.html">ЛК после анкеты</a>
+        </li>
+        <li>
+          <a href="profile-2.html">ЛК после подтверждения анкеты</a>
+        </li>
+        <li>
+          <a href="profile-3.html">ЛК после прохождения теста</a>
+        </li>
+        <li>
+          <a href="test.html">Тест</a>
+        </li>
+        <li>
+          <a href="admin.html">Админка</a>
+        </li>
+        <li>
+          <a href="control.html">Админка анкета</a>
+        </li>
+      </ul>
+    </main>
+  </body>
+</html>
