--- a/profile-1.html
+++ b/profile-1.html
@@ -133,7 +133,7 @@
                     <div class="profile-ask__success">
                       <h2 class="profile__subtitle">Ваш запрос отправлен!</h2>
                       <span class="profile__text"
-                        >В ближайшее время с вами свяжется ваш куратор</span
+                        >В ближайшее время с вами свяжется координатор Волонтёров 800</span
                       >
                     </div>
                   </div>
