--- a/questionnaire.html
+++ b/questionnaire.html
@@ -65,48 +65,6 @@
                       novalidate="novalidate"
                     >
                       <div class="new__project-step active">
-                        <!-- <div class="info__item">
-                          <div class="info__subtitle">
-                            <span class="field-req">Фамилия</span>
-                          </div>
-                          <div class="info__item__input input_box">
-                            <input
-                              type="text"
-                              name="fullname_f"
-                              placeholder=""
-                              value=""
-                            />
-                          </div>
-                        </div>
-
-                        <div class="info__item">
-                          <div class="info__subtitle">
-                            <span class="field-req">Имя</span>
-                          </div>
-                          <div class="info__item__input input_box">
-                            <input
-                              type="text"
-                              name="fullname_i"
-                              placeholder=""
-                              value=""
-                            />
-                          </div>
-                        </div>
-
-                        <div class="info__item">
-                          <div class="info__subtitle">
-                            <span class="field-req">Отчество</span>
-                          </div>
-                          <div class="info__item__input input_box">
-                            <input
-                              type="text"
-                              name="fullname_o"
-                              placeholder=""
-                              value=""
-                            />
-                          </div>
-                        </div> -->
-
                         <div class="profile-form__row-cont">
                           <div
                             class="profile-form__row profile-form__row_half-s"
@@ -115,7 +73,7 @@
                               <div class="profile-form-item__title">
                                 <span class="field-req">Дата рождения</span>
                               </div>
-                              <div class="profile-form-item__field">
+                              <div class="profile-form-item__field data-input">
                                 <input
                                   class="js-dob-calendar"
                                   type=""
@@ -125,6 +83,9 @@
                                   autocomplete="false"
                                   value=""
                                 />
+                                <div class="sn-img">
+                                  <img src="img/icons/calendar.svg" alt="" />
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -349,22 +310,6 @@
                               </div>
                             </div>
                           </div>
-                          <!-- <div
-                            class="profile-form__row profile-form__row_half-l"
-                          >
-                            <div class="profile-form-item">
-                              <div class="profile-form-item__title">
-                                <span class="field-req">E-mail</span>
-                              </div>
-                              <div class="profile-form-item__field">
-                                <input
-                                  type="email"
-                                  placeholder=""
-                                  name="email"
-                                />
-                              </div>
-                            </div>
-                          </div> -->
                         </div>
 
                         <div class="info__item border-bottom">
@@ -1064,17 +1009,6 @@
                             <span>Отправить анкету</span>
                           </button>
                         </div>
-                        <!-- <div class="pre_button_warn">
-                          Нажимая кнопку «Отправить», я подтверждаю, что
-                          ознакомился с
-                          <a href="/static/files/policy.pdf" target="_blank"
-                            >Политикой обработки персональных данных АНО «Центр
-                            800»</a
-                          >
-                          и даю согласие на обработку моих персональных данных,
-                          указанных в форме анкеты кандидата в волонтёры, а
-                          также получение обратной информации
-                        </div> -->
                       </div>
                     </form>
                   </div>
