--- a/login.html
+++ b/login.html
@@ -20,45 +20,13 @@
   <body class="page__body">
     <div class="site-container">
       <main class="main">
-
-        <section class="page-header">
-  <div class="container">
-    <div
-      class="section__inner general-section general-section_showcase general-section_showcase-sh"
-    >
-      <div class="grid__content">
-        <div
-          class="general-section__item general-section__item_color-dark"
-        >
-          <div class="general-section__item_title">
-            <h1>Анкета Волонтёра</h1>
-          </div>
-          <div class="general-section__item_text">
-            <p class="large">
-              Чтобы отправить заявку на участие в программе <span>«Волонтёры
-                800»</span>, заполните все поля анкеты.<br /><br />
-              Становиться кандидатами в Волонтёры 800 могут граждане в
-              возрасте от 16 лет.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-        <div class="container step__container">
-          <div class="step">
-            Шаг 1 / <span>2</span>
-          </div>
-        </div>
         <section>
           <div class="container container_whiteback enter__container">
-            <div class="enter">
-              <!-- <h1 class="enter__title">
-                Создание аккаунта <span>волонтёра</span>
-              </h1> -->
-              <form action="" id="enter-form">
+            <div class="enter login">
+              <h1 class="enter__title">
+                Вход в аккаунт <span>волонтёра</span>
+              </h1>
+              <form action="" id="login-form">
                 <div class="info__item">
                   <div class="info__item__input input_box">
                     <input
@@ -72,12 +40,13 @@
                 <div class="info__item">
                   <div class="info__item__input input_box">
                     <input
-                      type="text"
+                      type="password"
                       name="enter_fullname"
-                      placeholder="ФИО"
+                      placeholder="Введите ваш пароль"
                       value=""
                     />
                   </div>
+                  <a href="#" class="forget-password">Забыли пароль?</a>
                 </div>
                 <div class="pp__check">
                   <div class="pp-check pp-check_c">
@@ -96,11 +65,8 @@
                     <div class="pp-check__text">
                       <span>
                         <label for="agree1">
-                          Нажимая кнопку далее, я подтверждаю, что ознакомился и
-                          принимаю
-                          <a href="#"
-                            >политику обработки персональных данных</a
-                          ></label
+                          Запомнить меня
+                        </label
                         >
                       </span>
                     </div>
@@ -108,7 +74,7 @@
                 </div>
                 <div class="content-block__more">
                   <button type="submit" class="content-block-more">
-                    <span>Далее</span>
+                    <span>Войти</span>
                   </button>
                 </div>
               </form>
