--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
+  <script defer src="js/jquery.min.js"></script>
+  <script defer src="js/jq-inputmask.min.js"></script>
+  <script defer src="js/jquery.validate.js"></script>
+  <script defer src="js/datatables.js"></script>
+  <script defer src="js/datepicker.js"></script>
   <script defer src="js/main.js"></script>
 </head>
 
@@ -181,6 +186,7 @@
                           />
                         </div>
                       </div>
+                      <div class="passwords-error">Пароли должны совпадать</div>
                       <div class="content-block__more profile-password__btn">
                         <button type="submit" class="content-block-more">
                           <span>Сохранить</span>
