--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/custom.css">
   <script defer src="js/jquery.min.js"></script>
   <script defer src="js/jq-inputmask.min.js"></script>
   <script defer src="js/jquery.validate.js"></script>
@@ -24,45 +25,52 @@
     ul li:hover {
       color: darkcyan;
     }
+    a {
+      background: none;
+      color: #ffffff;
+      font-size: 22px;
+    }
+    a:hover {
+      color: #FF4D1C !important;
+      text-decoration: none;
+    }
   </style>
 
   <body class="page__body">
-    <main class="main">
-      <ul>
-        <li>
-          <a href="enter.html">Создание пользователя</a>
-        </li>
-        <li>
-          <a href="questionnaire.html">Анкета</a>
-        </li>
-        <li>
-          <a href="login.html">Вход</a>
-        </li>
-        <li>
-          <a href="recovery-1.html">Восстановление пароля (1 этап)</a>
-        </li>
-        <li>
-          <a href="recovery-2.html">Восстановление пароля (2 этап)</a>
-        </li>
-        <li>
-          <a href="profile-1.html">ЛК после анкеты</a>
-        </li>
-        <li>
-          <a href="profile-2.html">ЛК после подтверждения анкеты</a>
-        </li>
-        <li>
-          <a href="profile-3.html">ЛК после прохождения теста</a>
-        </li>
-        <li>
-          <a href="test.html">Тест</a>
-        </li>
-        <li>
-          <a href="admin.html">Админка</a>
-        </li>
-        <li>
-          <a href="control.html">Админка анкета</a>
-        </li>
-      </ul>
-    </main>
+    <ul>
+      <li>
+        <a href="enter.html">Создание пользователя</a>
+      </li>
+      <li>
+        <a href="questionnaire.html">Анкета</a>
+      </li>
+      <li>
+        <a href="login.html">Вход</a>
+      </li>
+      <li>
+        <a href="recovery-1.html">Восстановление пароля (1 этап)</a>
+      </li>
+      <li>
+        <a href="recovery-2.html">Восстановление пароля (2 этап)</a>
+      </li>
+      <li>
+        <a href="profile-1.html">ЛК после анкеты</a>
+      </li>
+      <li>
+        <a href="profile-2.html">ЛК после подтверждения анкеты</a>
+      </li>
+      <li>
+        <a href="profile-3.html">ЛК после прохождения теста</a>
+      </li>
+      <li>
+        <a href="test.html">Тест</a>
+      </li>
+      <li>
+        <a href="admin.html">Админка</a>
+      </li>
+      <li>
+        <a href="control.html">Админка анкета</a>
+      </li>
+    </ul>
   </body>
 </html>
