--- a/enter.html
+++ b/enter.html
@@ -20,7 +20,7 @@
 
   <body class="page__body">
     <div class="site-container">
-      <main class="main">
+      <main class="main main-fit">
 
         <section class="page-header">
   <div class="container">
