--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
   <body class="page__body">
     <div class="site-container">
-      <main class="main">
+      <main class="main main-fit">
         <section>
           <div class="container container_whiteback enter__container">
             <div class="enter login">
