--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
       <li>
         <a href="control.html">Админка анкета</a>
       </li>
+      <li>
+        <a href="archive-test.html">Архивный тест</a>
+      </li>
     </ul>
   </body>
 </html>
