--- a/index.html
+++ b/index.html
@@ -19,61 +19,174 @@
 </head>
 
   <style>
-    ul li {
-      list-style: none;
+  @keyframes gradient {
+    0% {
+      background-position: 0 50%;
     }
-    ul li:hover {
-      color: darkcyan;
+    50% {
+      background-position: 100% 50%;
     }
-    a {
-      background: none;
-      color: #ffffff;
-      font-size: 22px;
+    100% {
+      background-position: 0 50%;
     }
-    a:hover {
-      color: #FF4D1C !important;
-      text-decoration: none;
-    }
+  }
+
+  html, body {
+    height: 100%;
+    color: #fff;
+    background: -o-linear-gradient(310deg, #000000, #04523c);
+    background: linear-gradient(140deg, #0c0c0c, #03515a);
+    background-repeat: no-repeat;
+    background-size: 200%;
+    animation: gradient 10s infinite;
+    font-family:Arial, Helvetica, sans-serif;
+  }
+
+  html {
+    height: 200% !important;
+  }
+
+  li {
+    list-style: none;
+    list-style-type: decimal;
+    font-size: 18px;
+    margin-top: 15px;
+  }
+  .index {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px 15px;
+  }
+  h1 {
+    width: fit-content;
+    font-size: 45px;
+    font-weight: 600;
+    line-height: 130%;
+    background-image: linear-gradient(to right, #5cc889, #2b8bbb);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+  }
+  a {
+    background-image: linear-gradient(
+      to right,
+      #1dd994,
+      #1dd994 50%,
+      #ffffff 50%
+    );
+    background-size: 200% 100%;
+    background-position: -100%;
+    display: inline-block;
+    padding: 5px 0;
+    position: relative;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: all 0.3s ease-in-out;
+  }
+
+  a::before{
+    content: '';
+    background: #1dd994;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    transition: all 0.3s ease-in-out;
+  }
+  a::after{
+    content: '';
+    background: #ffffff;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 2px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  a:hover {
+    background-position: 0;
+  }
+
+  a:hover::before{
+    width: 100%;
+  }
+  a:hover::after{
+    width: 0;
+  }
+
+  .disc {
+    display: block;
+    font-size: 16px;
+    margin: 40px 0 50px;
+  }
+
+  .stack {
+    display: flex;
+    column-gap: 20px;
+    row-gap: 5px;
+    flex-wrap: wrap;
+  }
+  .stack span {
+    font-size: 22px;
+    font-weight: 600;
+    color: #817f7f;
+  }
   </style>
 
-  <body class="page__body">
-    <ul>
-      <li>
-        <a href="enter.html">Создание пользователя</a>
-      </li>
-      <li>
-        <a href="questionnaire.html">Анкета</a>
-      </li>
-      <li>
-        <a href="login.html">Вход</a>
-      </li>
-      <li>
-        <a href="recovery-1.html">Восстановление пароля (1 этап)</a>
-      </li>
-      <li>
-        <a href="recovery-2.html">Восстановление пароля (2 этап)</a>
-      </li>
-      <li>
-        <a href="profile-1.html">ЛК после анкеты</a>
-      </li>
-      <li>
-        <a href="profile-2.html">ЛК после подтверждения анкеты</a>
-      </li>
-      <li>
-        <a href="profile-3.html">ЛК после прохождения теста</a>
-      </li>
-      <li>
-        <a href="test.html">Тест</a>
-      </li>
-      <li>
-        <a href="admin.html">Админка</a>
-      </li>
-      <li>
-        <a href="control.html">Админка анкета</a>
-      </li>
-      <li>
-        <a href="archive-test.html">Архивный тест</a>
-      </li>
-    </ul>
+  <body>
+    <div class="index">
+      <div class="stack">
+        <span>Html</span>
+        <span>Scss</span>
+        <span>Js (ES6)</span>
+        <span>Js libraries</span>
+        <span>Gulp</span>
+        <span>Bem</span>
+      </div>
+    <h1>Разработка верстки личного кабинета, теста-опроса и админки "Волонтеры"</h1>
+    <span class="disc">Ниже приведены ссылки на страницы проекта. Для вашего удобства страницы открываются в новом окне.</span>
+      <ul>
+        <li>
+          <a href="enter.html">Создание пользователя</a>
+        </li>
+        <li>
+          <a href="questionnaire.html">Анкета</a>
+        </li>
+        <li>
+          <a href="login.html">Вход</a>
+        </li>
+        <li>
+          <a href="recovery-1.html">Восстановление пароля (1 этап)</a>
+        </li>
+        <li>
+          <a href="recovery-2.html">Восстановление пароля (2 этап)</a>
+        </li>
+        <li>
+          <a href="profile-1.html">ЛК после анкеты</a>
+        </li>
+        <li>
+          <a href="profile-2.html">ЛК после подтверждения анкеты</a>
+        </li>
+        <li>
+          <a href="profile-3.html">ЛК после прохождения теста</a>
+        </li>
+        <li>
+          <a href="test.html">Тест</a>
+        </li>
+        <li>
+          <a href="admin.html">Админка</a>
+        </li>
+        <li>
+          <a href="control.html">Админка анкета</a>
+        </li>
+        <li>
+          <a href="archive-test.html">Архивный тест</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
