--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <span>Scss</span>
         <span>Js (ES6)</span>
         <span>Js libraries</span>
+        <span>jQuery</span>
         <span>Gulp</span>
         <span>Bem</span>
       </div>
