--- a/index.html
+++ b/index.html
@@ -152,40 +152,40 @@
     <span class="disc">Ниже приведены ссылки на страницы проекта. Для вашего удобства страницы открываются в новом окне.</span>
       <ul>
         <li>
-          <a href="enter.html">Создание пользователя</a>
+          <a href="enter.html" target="_blank">Создание пользователя</a>
         </li>
         <li>
-          <a href="questionnaire.html">Анкета</a>
+          <a href="questionnaire.html" target="_blank">Анкета</a>
         </li>
         <li>
-          <a href="login.html">Вход</a>
+          <a href="login.html" target="_blank">Вход</a>
         </li>
         <li>
-          <a href="recovery-1.html">Восстановление пароля (1 этап)</a>
+          <a href="recovery-1.html" target="_blank">Восстановление пароля (1 этап)</a>
         </li>
         <li>
-          <a href="recovery-2.html">Восстановление пароля (2 этап)</a>
+          <a href="recovery-2.html" target="_blank">Восстановление пароля (2 этап)</a>
         </li>
         <li>
-          <a href="profile-1.html">ЛК после анкеты</a>
+          <a href="profile-1.html" target="_blank">ЛК после анкеты</a>
         </li>
         <li>
-          <a href="profile-2.html">ЛК после подтверждения анкеты</a>
+          <a href="profile-2.html" target="_blank">ЛК после подтверждения анкеты</a>
         </li>
         <li>
-          <a href="profile-3.html">ЛК после прохождения теста</a>
+          <a href="profile-3.html" target="_blank">ЛК после прохождения теста</a>
         </li>
         <li>
-          <a href="test.html">Тест</a>
+          <a href="test.html" target="_blank">Тест</a>
         </li>
         <li>
-          <a href="admin.html">Админка</a>
+          <a href="admin.html" target="_blank">Админка</a>
         </li>
         <li>
-          <a href="control.html">Админка анкета</a>
+          <a href="control.html" target="_blank">Админка анкета</a>
         </li>
         <li>
-          <a href="archive-test.html">Архивный тест</a>
+          <a href="archive-test.html" target="_blank">Архивный тест</a>
         </li>
       </ul>
     </div>
